--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<htmldate>
   <head>
     <meta http-equiv="refresh" content="0; URL=/" />
   </head>
   <body></body>
-</html>
+</htmldate of about page
