--- a/index.html
+++ b/index.html
@@ -11,3 +11,13 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RTHBWS6T9G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RTHBWS6T9G');
+</script>
