--- a/404.html
+++ b/404.html
@@ -12,3 +12,13 @@
     <div id="root"></div>
   </body>
 </html>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RTHBWS6T9G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RTHBWS6T9G');
+</script>
